--- a/kernel/sched/Makefile
+++ b/kernel/sched/Makefile
@@ -35,3 +35,4 @@ obj-$(CONFIG_MEMBARRIER) += membarrier.o
 obj-$(CONFIG_CPU_ISOLATION) += isolation.o
 obj-$(CONFIG_PSI) += psi.o
 obj-$(CONFIG_SCHED_CORE) += core_sched.o
+obj-$(CONFIG_SPRD_ROTATION_TASK) += sprd_rotation.o
