switch to stock runner

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,10 +6,14 @@ on:
 
 jobs:
   build:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        
+      - name: Install dependency 
+        run: |
+          sudo apt install zip python3 jq -y
 
       - name: Run build script
         env:
