--- a/drivers/kernelsu/Kconfig
+++ b/drivers/kernelsu/Kconfig
@@ -1,74 +1,56 @@
 menu "KernelSU"
 
 config KSU
-	  tristate "KernelSU function support"
-	  default y
-	  help
-	    Enable kernel-level root privileges on Android System.
-	    To compile as a module, choose M here: the
-	    module will be called kernelsu.
-
-config KSU_DEBUG
-	  bool "KernelSU debug mode"
-	  depends on KSU
-	  default n
-	  help
-	    Enable KernelSU debug mode.
-
-config KSU_MULTI_MANAGER_SUPPORT
-    bool "Multi KernelSU manager support"
-    depends on KSU
-    default n
-    help
-	    Enable multi KernelSU manager support
-
-config KSU_MANUAL_HOOK
-	bool "Manual hooking GKI kernels without kprobes"
-	depends on KSU && KSU != m
+	tristate "KernelSU function support"
+	depends on OVERLAY_FS
 	default y
 	help
-	  If enabled, Hook required KernelSU syscalls with manually-patched function.
-	  If disabled, Hook required KernelSU syscalls with Kernel-probe.
+	  Enable kernel-level root privileges on Android System.
+	  To compile as a module, choose M here: the
+	  module will be called kernelsu.
+
+config KSU_KPROBES_HOOK
+	bool "Use kprobes for kernelsu"
+	depends on KSU
+	depends on KPROBES
+	default y
+	help
+	  Disable if you use manual hooks.
+
+config KSU_DEBUG
+	bool "KernelSU debug mode"
+	depends on KSU
+	default n
+	help
+	  Enable KernelSU debug mode.
 
 config KSU_ALLOWLIST_WORKAROUND
-    bool "KernelSU Session Keyring Init workaround"
-    depends on KSU
-    default n
-    help
-      Enable session keyring init workaround for problematic devices.
-      Useful for situations where the SU allowlist is not kept after a reboot
+        bool "KernelSU Session Keyring Init workaround"
+        depends on KSU
+        default n
+        help
+          Enable session keyring init workaround for problematic devices.
+          Useful for situations where the SU allowlist is not kept after a reboot.
 
-config KSU_CMDLINE
-	  bool "Enable KernelSU cmdline"
-	  depends on KSU && KSU != m
-	  default n
-	  help
-	    Enable a cmdline called kernelsu.enabled
-	    Value 1 means enabled, value 0 means disabled.
-
-config KPM
-	  bool "Enable SukiSU KPM"
-	  depends on KSU && 64BIT
-	  default y
-	  help
-	    Enabling this option will activate the KPM feature of SukiSU.
-	    This option is suitable for scenarios where you need to force KPM to be enabled.
-	    but it may affect system stability.
-	  select KALLSYMS
-	  select KALLSYMS_ALL
+config KSU_LSM_SECURITY_HOOKS
+	bool "use lsm security hooks"
+        depends on KSU
+        default y
+	help
+	  Disabling this is mostly only useful for kernel 4.1 and older.
+	  Make sure to implement manual hooks on security/security.c.
 
 menu "KernelSU - SUSFS"
 config KSU_SUSFS
     bool "KernelSU addon - SUSFS"
     depends on KSU
-    depends on THREAD_INFO_IN_TASK
     default y
     help
       Patch and Enable SUSFS to kernel with KernelSU.
 
 config KSU_SUSFS_HAS_MAGIC_MOUNT
-    bool "Say yes if the current KernelSU repo has magic mount implemented (default y)"
-    depends on KSU_SUSFS
+    bool "Say yes if the current KernelSU repo has magic mount implemented (default n)"
+    depends on KSU
     default y
     help
       - Enable to indicate that the current SUSFS kernel supports the auto hide features for 5ec1cff's Magic Mount KernelSU
@@ -120,6 +102,16 @@ config KSU_SUSFS_SUS_KSTAT
     help
       - Allow spoofing the kstat of user-defined file/directory.
       - Effective only on zygote spawned user app process.
+
+config KSU_SUSFS_SUS_OVERLAYFS
+    bool "Enable to automatically spoof kstat and kstatfs for overlayed files/directories"
+    depends on KSU_SUSFS
+    default n
+    help
+      - Automatically spoof the kstat and kstatfs for overlayed files/directories.
+      - Enable it if you are using legacy KernelSU and dont have auto hide features enabled.
+      - No susfs command is needed in userspace.
+      - Effective on all processes.
 
 config KSU_SUSFS_TRY_UMOUNT
     bool "Enable to use ksu's ksu_try_umount"
